--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style/index.css">
+    <title>My Portfolio</title>
+    <header>
+        <h1>Lisa Arcangel</h1>
+
+        <nav>
+            <a href="home">Home</a>
+            <a href="about">About</a>
+            <a href="contact">Contact</a>
+            <a href="project">Projects</a>
+        </nav>
+
+        <img src="/images/surf.jpg" alt="surboards stacked on a van">
+        <img src="/images/pineapple.jpg" alt="Fresh pineapples">
+        <img src="/images/Lahaina.jpg" alt="city of lahaina on maui">
+        <img src="/images/Kauai.jpg" alt="overview of the island of kauai">
+    </header>
 </head>
 <body>
     
