--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
     <header>
         <h1>Lisa Arcangel</h1>
 
+        <section>
         <nav>
             <a href="home">Home</a>
             <a href="about">About</a>
             <a href="contact">Contact</a>
             <a href="project">Projects</a>
         </nav>
+    </section>
 
-        <img src="/images/surf.jpg" alt="surboards stacked on a van">
-        <img src="/images/pineapple.jpg" alt="Fresh pineapples">
-        <img src="/images/Lahaina.jpg" alt="city of lahaina on maui">
-        <img src="/images/Kauai.jpg" alt="overview of the island of kauai">
+    <h2>Introducing my site</h2>
+    
+        <div>
+       <img src="/images/braden-jarvis-prSogOoFmkw-unsplash (2).jpg" alt="kauai">
+       </div>
+
     </header>
 </head>
 <body>
