--- a/index.html
+++ b/index.html
@@ -3,27 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
     <link rel="stylesheet" href="style/index.css">
     <title>My Portfolio</title>
     <header>
         <h1>Lisa Arcangel</h1>
 
         <section>
+
         <nav>
-            <a href="home">Home</a>
-            <a href="about">About</a>
-            <a href="contact">Contact</a>
-            <a href="project">Projects</a>
+            <div class="links">
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#contact">Contact</a>
+                <a href="#projects">Projects</a>          
+            </div>
         </nav>
+
     </section>
 
+    </header>
+
     <h2>Introducing my site</h2>
+
+        <p>I'm a UX designer - Web developer.  Life is already compolicated, keep it simple.
+            Designs are curated from life experiences and future endeavors.  Pineapple does not 
+            belong on pizza.
+        </p>
     
         <div>
-       <img src="/images/braden-jarvis-prSogOoFmkw-unsplash (2).jpg" alt="kauai">
+       <img src="https://i.picsum.photos/id/1021/2048/1206.jpg" alt="Mountains">
        </div>
 
-    </header>
+       <img src="https://i.picsum.photos/id/1039/6945/4635.jpg" alt="waterfall">
+       <img src="https://i.picsum.photos/id/1052/4000/2667.jpg" alt="beach">
+       <img src="https://i.picsum.photos/id/1055/5472/3648.jpg" alt="sand">
+
+  
 </head>
 <body>
     
