Content addeed to text file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
     <link rel="stylesheet" href="style/index.css">
+
     <title>My Portfolio</title>
     <header>
         <h1>Lisa Arcangel</h1>
@@ -30,14 +31,18 @@
             Designs are curated from life experiences and future endeavors.  Pineapple does not 
             belong on pizza.
         </p>
-    
+    <section class="container">
         <div>
        <img src="https://i.picsum.photos/id/1021/2048/1206.jpg" alt="Mountains">
        </div>
+    </section>
 
+    <section>
        <img src="https://i.picsum.photos/id/1039/6945/4635.jpg" alt="waterfall">
        <img src="https://i.picsum.photos/id/1052/4000/2667.jpg" alt="beach">
        <img src="https://i.picsum.photos/id/1055/5472/3648.jpg" alt="sand">
+    </section>
+
 
   
 </head>
