added color and hover over text to file

--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@
         simple. Designs are curated from life experiences and future endeavors.
         Pineapple does not belong on pizza.
       </p>
-      <img
-        src="https://i.picsum.photos/id/1021/2048/1206.jpg"
-        alt="Mountains"
-      />
     </section>
+    <img src="https://i.picsum.photos/id/1021/2048/1206.jpg" alt="Mountains" />
 
     <section class="images">
       <img
