--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <h1>Lisa Arcangel</h1>
 
       <nav>
-        <a href="#" class="active">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-        <a href="#">Projects</a>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <a href="#project">Projects</a>
       </nav>
     </header>
 
@@ -41,6 +41,7 @@
       <img src="https://i.picsum.photos/id/1055/5472/3648.jpg" alt="sand" />
       <p>I hate this so much! This is very confusing</p>
     </section>
+
     <footer>
       <button>Contact Me</button>
     </footer>
