--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="style/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <title>My Portfolio</title>
+  </head>
+  <body>
+    <header>
+      <h1>Lisa Arcangel</h1>
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <a href="#project">Projects</a>
+      </nav>
+    </header>
+
+    <section class="container">
+      <h2>Introducing my site</h2>
+
+      <p>
+        I'm a UX designer - Web developer. Life is compolicated, keep it simple.
+        Designs are curated from life experiences and future endeavors.
+        <br />Pineapple does not belong on pizza.
+      </p>
+    </section>
+    <img src="images/Hawaii.jpg" alt="Mountains" />
+
+    <section class="images">
+      <img class="pineapple" src="images/image1.jpg" alt="Pineapples" />
+      <img src="images/Beach.jpg" alt="beach" />
+      <img src="images/sunset.jpg" alt="sunset" />
+      <img src="images/surfboards.jpg" alt="surfboards" />
+      <p>I hate this so much! This is very confusing</p>
+    </section>
+
+    <footer>
+      <button>Contact Me</button><br /><br />
+      <a
+        href="https://www.facebook.com/"
+        target="_blank"
+        class="fa fa-facebook"
+      ></a>
+      <a
+        href="https://twitter.com/home"
+        target="_blank"
+        class="fa fa-twitter"
+      ></a>
+    </footer>
+  </body>
 </html>
