added responsive design and max-width of 800 & 500

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <title>My Portfolio</title>
   </head>
+
   <body>
     <header>
       <h1>Lisa Arcangel</h1>
@@ -24,7 +25,7 @@
 
     <section class="container">
       <h2>Introducing my site</h2>
-
+      <!---->
       <p>
         I'm a UX designer - Web developer. Life is compolicated, keep it simple.
         Designs are curated from life experiences and future endeavors.
@@ -38,7 +39,7 @@
       <img src="images/Beach.jpg" alt="beach" />
       <img src="images/sunset.jpg" alt="sunset" />
       <img src="images/surfboards.jpg" alt="surfboards" />
-      <p>I hate this so much! This is very confusing</p>
+      <p class="lastp">I hate this so much! This is very confusing</p>
     </section>
 
     <footer>
