Commented on html and css to organize page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+
     <title>My Portfolio</title>
   </head>
 
@@ -22,16 +23,16 @@
         <a href="#project">Projects</a>
       </nav>
     </header>
-
     <section class="container">
       <h2>Introducing my site</h2>
-      <!---->
+
       <p>
         I'm a UX designer - Web developer. Life is compolicated, keep it simple.
         Designs are curated from life experiences and future endeavors.
         <br />Pineapple does not belong on pizza.
       </p>
     </section>
+    <!--End of Container-->
     <img src="images/Hawaii.jpg" alt="Mountains" />
 
     <section class="images">
@@ -39,7 +40,7 @@
       <img src="images/Beach.jpg" alt="beach" />
       <img src="images/sunset.jpg" alt="sunset" />
       <img src="images/surfboards.jpg" alt="surfboards" />
-      <p class="lastp">I hate this so much! This is very confusing</p>
+      <p class="lastp">Food, fitness, and adventures is why I work hard!</p>
     </section>
 
     <footer>
